--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ a:hover{color: greenyellow;}
           				<div id="mobile-back-button" draggable="true">
           					<i class="bi bi-x-circle-fill"></i>
           				</div>
-          				<iframe class="game-iframe" id="game-area" src="https://77pen.github.io/p3/top-speed-3d" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen></iframe>
+          				<iframe class="game-iframe" id="game-area" src="https://ubg77.github.io/edit/top-speed-3d/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen></iframe>
           			</div>
           		</div>
 
